Set up cmake and testing on build

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,32 @@
 *
 # ignore all but these files:
+
 !.gitignore
 !README.md
 !LICENSE
-!Makefile
+!CMakeLists.txt
+
 !/include
-!/include/*.h
+!/include/core
+!/include/core/*.h
+!/include/core/*.hpp
+
 !/src
-!/src/*.c
-!/src/*.cpp
+!/src/CMakeLists.txt
+
+!/src/core
+!/src/core/*.c
+!/src/core/*.cpp
+!/src/core/CMakeLists.txt
+
+!/src/app
+!/src/app/main.cpp
+!/src/app/CMakeLists.txt
+
 !/tests
+!/tests/core_tests.cpp
+!/tests/nestest.cpp
+!/tests/nestest.hpp
 !/tests/nestest.nes
 !/tests/nestest.log
+!/tests/CMakeLists.txt
