--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,6 +8,11 @@ file(COPY
         DESTINATION ${PROJECT_BINARY_DIR}/tests
 )
 
+file(COPY
+    ${PROJECT_SOURCE_DIR}/tests/mapper_6.nes
+        DESTINATION ${PROJECT_BINARY_DIR}/tests
+)
+
 find_package(Boost 1.46.1 REQUIRED COMPONENTS unit_test_framework)
 
 add_library(nestest nestest.cpp)
@@ -19,6 +24,7 @@ target_link_libraries(nestest core)
 add_executable(core_tests core_tests.cpp)
 
 target_link_libraries(core_tests
+    core
     nestest
     Boost::unit_test_framework
 )
@@ -29,7 +35,7 @@ target_compile_definitions(core_tests
 )
 
 enable_testing()
-add_test(test_all core_tests)
+add_test(core_tests core_tests)
 
 add_custom_command(
     TARGET core_tests
