--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -4,5 +4,17 @@ add_library(core STATIC
     memory.c
     cppwrapper.cpp
 )
-
 target_include_directories( core PUBLIC ${PROJECT_SOURCE_DIR}/include )
+
+if(DEFINED HARTE_TESTS_PATH) 
+    add_library(core_harte STATIC
+        cpu.c
+        ppu.c
+        memory.c
+        cppwrapper.cpp
+    )
+    target_include_directories( core_harte PUBLIC ${PROJECT_SOURCE_DIR}/include )
+    target_compile_definitions(core_harte
+        PRIVATE -DDOING_HARTE_TESTS=1
+    )
+endif()
