--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,17 @@ cmake_minimum_required(VERSION 3.5)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set (CMAKE_BUILD TYPE Debug)
 
+if (EXISTS ${CMAKE_SOURCE_DIR}/harte_tests_dir_path.txt) 
+    file(STRINGS harte_tests_dir_path.txt HARTE_TESTS_PATH)
+    message("harte_tests_dir_path.txt found:")
+    message(${HARTE_TESTS_PATH})
+else()
+    message("harte_tests_dir_path.txt not found")
+endif()
+
+add_compile_options("-g")
+add_compile_options("-Wall")
+
 project (nes-emu)
 add_subdirectory(src)
 add_subdirectory(tests)
