Add crude controller functionality and move logging buffer out of gui thread

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(nes-emu
     mainwindow.cpp
     nescontext.cpp
     nesscreen.cpp
+    nescontroller.cpp
     openglwidget.cpp
 )
 
