--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(core STATIC
     cpu.c
     ppu.c
     memory.c
+    controller.c
     cppwrapper.cpp
 )
 target_include_directories( core PUBLIC ${PROJECT_SOURCE_DIR}/include )
@@ -11,6 +12,7 @@ if(DEFINED HARTE_TESTS_PATH)
         cpu.c
         ppu.c
         memory.c
+	controller.c
         cppwrapper.cpp
     )
     target_include_directories( core_harte PUBLIC ${PROJECT_SOURCE_DIR}/include )
